added link apis
