# src/routes/links.route.ts
@@ -1,8 +1,8 @@
 import { Router } from 'express';
-import { CreateUserDto } from '@dtos/users.dto';
 import { Routes } from '@interfaces/routes.interface';
 import { ValidationMiddleware } from '@middlewares/validation.middleware';
 import { LinkController } from '@/controllers/links.controller';
+import { CreateLinkDTO } from '@/dtos/links.dto';
 
 export class LinkRoute implements Routes {
   public path = '/links';
@@ -14,11 +14,9 @@ export class LinkRoute implements Routes {
   }
 
   private initializeRoutes() {
-    // this.router.get(`${this.path}`, this.user.getUsers);
-    // this.router.get(`${this.path}/:id`, this.user.getUserById);
-
-    this.router.post(`${this.path}`, ValidationMiddleware(CreateUserDto), this.link.createLink);
-    // this.router.put(`${this.path}/:id`, ValidationMiddleware(CreateUserDto, true), this.user.updateUser);
-    // this.router.delete(`${this.path}/:id`, this.user.deleteUser);
+    this.router.get(`${this.path}`, this.link.getLinks);
+    this.router.post(`${this.path}`, ValidationMiddleware(CreateLinkDTO), this.link.createLink);
+    this.router.put(`${this.path}/:id`, ValidationMiddleware(CreateLinkDTO), this.link.updateLink);
+    this.router.delete(`${this.path}/:id`, this.link.deleteLink);
   }
 }
